@@ -1,5 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = linux
-
 include_HEADERS = fuse.h
+noinst_HEADERS = fuse_kernel.h
