@@ -7,7 +7,7 @@
 */
 
 
-#include <linux/fuse.h>
+#include "fuse_kernel.h"
 #include <linux/version.h>
 
 #if LINUX_VERSION_CODE < KERNEL_VERSION(2,6,0) && LINUX_VERSION_CODE >= KERNEL_VERSION(2,5,0)
