@@ -1,3 +1,7 @@
+2004-12-01  Miklos Szeredi <miklos@szeredi.hu>
+
+	* move linux/fuse.h to fuse_kernel.h
+
 2004-11-29  Miklos Szeredi <miklos@szeredi.hu>
 
 	* kernel: make readpage() uninterruptible
